Corrigido erro no paragrafo da class advantage-item

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li class="advantage-item">
           <img class="icon" src="/img/velocidade.svg" alt="velocidade">
           <h3>40 km/h</h3>
-          <p>A mais ráída bicicleta elétrica dispnível hoje no mercado.</p>
+          <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
         </li>
         <li class="advantage-item">
           <img class="icon" src="/img/velocidade.svg" alt="rastreador">
